--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.7",
     "bootstrap": "^5.0.2",
+    "namor": "^2.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-burger-menu": "^3.0.6",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
