--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.16.7",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "history": "^5.0.0",
     "namor": "^2.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
